--- a/src/framework/components/loader/framework.scss
+++ b/src/framework/components/loader/framework.scss
@@ -8,7 +8,7 @@ $loader: ".loader";
     &[data-variation="await"] {
         display: inline-grid;
         grid-template-columns: repeat(3, var(--loader-size));
-        grid-gap: var(--loader-margin);
+        gap: var(--loader-margin);
 
         & > * {
             background-color: vhsl(--background);
