--- a/src/framework/elements/document/_default.scss
+++ b/src/framework/elements/document/_default.scss
@@ -3,7 +3,7 @@
      * Root Tokens
      */
 
-    --document-root-background: var(--palette-light-dull);
+    --document-root-background: var(--palette-light-muted);
     --document-root-color: var(--palette-dark-base);
 
     --document-root-font-family: var(--font-family-text);
